[package]
name = "openfashion-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "6.0.11"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
starwars = {path = "./starwars"}
async-graphql-poem = "6.0.11"
poem = "1.3.59"

