[package]
name = "openfashion-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "6.0.11"
tokio = { version = "1.0", features = ["full"] }
starwars = {path = "./starwars"}
hyper = "1.0.1"
async-graphql-warp = "6.0.11"
warp = "0.3.6"

